<resources>
    <string name="app_name">SAFE TRIP</string>
    <string name="driver_name_car_number_plate">Driver name/Car number plate</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_rate_driver">RATE DRVIER</string>
    <string name="rateTheDriver"><u>Rate the driver</u></string>
    <string name="howFastWasTheDriving">How fast was the driving?</string>
    <string name="howWasTheBehaviour">How was the behavior?</string>
    <string name="conditionOfTheCar">Condition of the car?</string>
    <string name="wouldYouRecommendThisDriverToAFriend">Would you recommend this driver to a friend?</string>
    <string name="additionalDetails">Additional details(We aim to make travel for families secure. Details from you can help us do that)</string>
    <string name="submitReview">Submit Review</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="search">Search</string>
    <string name="unratedTrip">Unrated Trip</string>
    <string name="nameOfMember">Name of Member</string>
    <string name="dateOfReview">Date of Review</string>
    <string name="reviewText">Review Text</string>
    <string name="driverName">Name of Driver</string>
    <string name="rateDriver">RATE</string>
    <string name="reviews">Reviews</string>
    <string name="reviewSubmittedSuccessfully">Review has been submitted successfully</string>
    <string name="reviewSubmittedFailure">Review submission failed</string>
    <string name="title_activity_ratings">RatingsActivity</string>
    <string name="title_activity_list_of_drivers_review">REVIEWS</string>
    <string name="driversReviewListUpdatedSuccessfully">Drivers Review List Updated Successfully</string>
    <string name="title_activity_driver_details">SAFE TRIP</string>
    <string name="submit">Submit</string>
    <string name="licenseNumber">License Number</string>
    <string name="validity">Validity</string>
    <string name="contactNumber">Contact Number</string>
    <string name="policeIdNumber">Police Id Number</string>
    <string name="notYetRated">You travelled with this driver last on %s. Do you want to rate the driver now?</string>
    <string name="numberOfRatings">%s Reviews</string>
    <string name="numberOfRecommendations">%s people recommend this driver to their friends</string>
    <string name="noSearchResultsFound">No search result found</string>
    <string name="noDriverReviewFound">No driver review found</string>
    <string name="driverReviewsFound">Drivers review obtained successfully</string>
    <string name="driversSearchResultObtained">Drivers search result obtained successfully</string>
    <string name="unratedTripNotification">You have %s un-rated trips. Would you like to rate them now?</string>
    <string name="driverNotificationMessage"></string>
    <string name="title_activity_unrated_trips">UNRATED TRIPS</string>
    <string name="dateOfTrip">Date of Trip</string>
    <string name="noRatedTripFound">No unrated trip found</string>
    <string name="unRatedTripFound">unrated trips found</string>
    <string name="drivingSpeed">Driving</string>
    <string name="driverBehaviour">Behaviour</string>
    <string name="carCondition">Car Condition</string>
    <string name="readAllReviews">Read All Reviews(%s)</string>
</resources>
