<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.microsoft.safetravel.RateDriverActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rateTheDriver"
        android:gravity="center"/>
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/howFastWasTheDriving"
    android:layout_marginTop="4dp"/>

    <RadioGroup
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:checkedButton="@+id/fast_neutral"
        android:id="@+id/fastDrivingRadioGroup">
        <RadioButton
            android:id="@+id/fast_unsatisfied"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1" />
        <RadioButton
            android:id="@+id/fast_neutral"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/fast_satisfied"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3"/>
        <RadioButton
            android:id="@+id/fast_extremelySatisfied"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="4"/>
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/howWasTheBehaviour"
        android:layout_marginTop="4dp"/>

    <RadioGroup
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:checkedButton="@+id/behaviour_neutral"
        android:id="@+id/behaviourRadioGroup">
        <RadioButton
            android:id="@+id/behaviour_unsatisfied"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1" />
        <RadioButton
            android:id="@+id/behaviour_neutral"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/behaviour_satisfied"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3"/>
        <RadioButton
            android:id="@+id/behaviour_extremelySatisfied"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="4"/>
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/conditionOfTheCar"
        android:layout_marginTop="4dp"/>

    <RatingBar
        android:id="@+id/conditionOfCarRatingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="4"
        android:stepSize="1.0"
        android:rating="2.0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wouldYouRecommendThisDriverToAFriend"
        android:layout_marginTop="4dp"/>

    <RadioGroup
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:checkedButton="@+id/yes"
        android:id="@+id/recommendDriverRadioGroup">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:id="@+id/yes"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:id="@+id/no"/>
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/additionalDetails"
        android:layout_marginTop="4dp"/>

    <EditText
        android:id="@+id/aditionalDetailsEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/EditTextStyle"
        android:lines="3"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ButtonStyle"
        android:text="@string/submitReview"
        android:layout_marginTop="4dp"
        android:onClick="submitReview"/>

</LinearLayout>
