

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.microsoft.safetravel.DriverDetails"
    android:orientation="vertical"
    android:id="@+id/driverDetailsParent"
    android:background="@color/white">

 <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/white"
     android:padding="4dp">

     <ImageView
         android:id="@+id/imageOfDriver"
         android:src="@drawable/default_customer_photo"
         style="@style/ImageIconSize"
         android:layout_centerVertical="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />

     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/driverName"
         android:id="@+id/driverName"
         android:layout_toRightOf="@+id/imageOfDriver"
         style="@style/BoldTextViewStyle"
         android:layout_marginBottom="-8dp"/>

     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/numberOfRatings"
         android:layout_below="@+id/driverName"
         android:layout_toRightOf="@+id/imageOfDriver"
         style="@style/TextViewStyle"
         android:id="@+id/numberOfRatings"
         android:layout_marginBottom="-8dp"/>

     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/numberOfRecommendations"
         android:id="@+id/numberOfRecommendations"
         android:layout_toRightOf="@+id/imageOfDriver"
         android:layout_below="@+id/numberOfRatings"
         style="@style/TextViewStyle"
         />

     <ImageView
         android:id="@+id/imageOfCard"
         android:src="@drawable/green_circle"
         style="@style/ImageIconSize24"
         android:layout_toRightOf="@+id/driverName"
         android:layout_marginLeft="54dp"
      />

 </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/licenseNumber"
            android:id="@+id/licenseNumberTextView"
            style="@style/TextViewStyle"
            android:layout_marginBottom="-8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/licenseNumber"
            android:id="@+id/licenseNumberValue"
            style="@style/BoldTextViewStyle"
            android:layout_marginBottom="-8dp"
            android:layout_toRightOf="@+id/licenseNumberTextView"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/validity"
            android:id="@+id/validityTextView"
            style="@style/TextViewStyle"
            android:layout_marginBottom="-8dp"
            android:layout_below="@+id/licenseNumberTextView"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/validity"
            android:id="@+id/validityValue"
            style="@style/BoldTextViewStyle"
            android:layout_below="@+id/licenseNumberValue"
            android:layout_toRightOf="@+id/validityTextView"
            android:layout_marginBottom="-8dp"
            android:layout_alignLeft="@+id/licenseNumberValue"

            />

        <TextView
            android:layout_marginBottom="-8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contactNumber"
            android:id="@+id/contactNumberTextView"
            style="@style/TextViewStyle"
            android:layout_below="@+id/validityTextView"/>
        <TextView
            android:layout_marginBottom="-8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contactNumber"
            android:id="@+id/contactNumberValue"
            style="@style/BoldTextViewStyle"
            android:layout_below="@+id/validityValue"
            android:layout_toRightOf="@+id/contactNumberTextView"
            android:layout_alignLeft="@+id/licenseNumberValue"/>

        <TextView
            android:layout_marginBottom="-8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/policeIdNumber"
            android:id="@+id/policeIdNumberTextView"
            style="@style/TextViewStyle"
            android:layout_below="@+id/contactNumberTextView"/>
        <TextView
            android:layout_marginBottom="-8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/policeIdNumber"
            android:id="@+id/policeIdNumberValue"
            style="@style/BoldTextViewStyle"
            android:layout_below="@+id/contactNumberValue"
            android:layout_toRightOf="@+id/policeIdNumberTextView"
            android:layout_alignLeft="@+id/licenseNumberValue"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightBlack"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:id="@+id/lastTravelledDate"
        android:visibility="gone"
        android:layout_marginBottom="-8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/notYetRated"
            android:text="@string/notYetRated"
            style="@style/TextViewStyle"
            android:layout_marginBottom="-8dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rateDriver"
            style="@style/ButtonStyle"
            android:layout_below="@+id/notYetRated"
            android:onClick="moveToRateDriverPage"
            android:layout_marginBottom="-8dp"/>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:id="@+id/driversReviewListLayout"
        android:paddingRight="8dp"
        android:visibility="gone"
        >

        <TextView
            android:layout_marginBottom="-8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drivingSpeed"
            android:id="@+id/drivingSpeedTextView"
            style="@style/BoldTextViewStyle"
          />

        <ProgressBar
            android:layout_marginLeft="44dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:progress="50"
            android:max="100"
            android:id="@+id/speedProgressBar"
            android:isIndicator="true"
            android:layout_toRightOf="@+id/drivingSpeedTextView"></ProgressBar>

        <TextView
            android:layout_marginBottom="-8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/driverBehaviour"
            android:id="@+id/driverBehaviourTextView"
            style="@style/BoldTextViewStyle"
            android:layout_below="@+id/drivingSpeedTextView"
            android:layout_alignLeft="@+id/drivingSpeedTextView"
            />

        <ProgressBar
            android:layout_marginBottom="10dp"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:progress="50"
            android:max="100"
            android:id="@+id/behaviourProgressBar"
            android:isIndicator="true"
            android:layout_toRightOf="@+id/driverBehaviourTextView"
            android:layout_below="@+id/speedProgressBar"
            android:layout_alignLeft="@+id/speedProgressBar"></ProgressBar>

        <TextView
            android:layout_marginBottom="-8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/carCondition"
            android:id="@+id/carConditionTextView"
            style="@style/BoldTextViewStyle"
            android:layout_below="@+id/driverBehaviourTextView"
            android:layout_alignLeft="@+id/driverBehaviourTextView"
            />

        <ProgressBar
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:progress="50"
            android:max="100"
            android:id="@+id/conditionProgressBar"
            android:isIndicator="true"
            android:layout_toRightOf="@+id/carConditionTextView"
            android:layout_below="@+id/behaviourProgressBar"
            android:layout_alignLeft="@+id/behaviourProgressBar"></ProgressBar>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/readAllReviews"
            style="@style/ButtonStyle"
    android:id="@+id/readAllReviewsButton"
            android:onClick="moveToDriverReviews"
            android:layout_below="@+id/carConditionTextView"
            />

<!--
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reviews"
            android:id="@+id/reviewsTextView"
            style="@style/TextViewStyle"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_below="@+id/reviewsTextView"
            android:id="@+id/lineView"/>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/driversReviewList"
            android:layout_below="@+id/lineView"></ListView>
-->
    </RelativeLayout>

</LinearLayout>
